2021-07-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* synctex-main.c (synctex_test_file):
	Output not "compress mode" but "io mode".

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-04  Karl Berry  <karl@freefriends.org>

	* synctex_scanner_new_with_output_file: don't warn to terminal
	with _synctex_error when a file is missing.
	code from https://gitlab.gnome.org/GNOME/evince/commit/678410e81d0c889f4db4e995ca451ed62b8a2eee
	Debian bug #908964

2019-10-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* synctex-p-rec.ch0, synctex-ep-rec.ch0: Fix \meaning\synctex
	for pTeX and upTeX.
	* am/synctex.am: Adjusted.

2019-08-07  Akira Kakuto  <kakuto@w32tex.org>

	* synctex.c: Improve support of non-ASCII path names
	(Windows only).

2018-10-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Cleanup for non-ascii file names (w32 only).

2018-07-27  Karl Berry  <karl@freefriends.org>

	* synctex_parser_api_level.txt: new file (contents "2.0.0").
	* ac/synctex.ac: use it instead of synctex_parser_version.txt.
	Per Debian.
	https://github.com/jlaurens/synctex/issues/23
	https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=895980

2018-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Fix a bug that Magnification is not correctly
	recorded. Report by Karel Horak:
	https://tug.org/pipermail/tex-live/2018-July/042063.html

2018-06-13  Karl Berry  <karl@tug.org>

	* man1/synctex.1: man page list syntax.
	Report/patch from esr, 12 Jun 2018 15:16:13.

2018-06-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* synctex.c: Allow non-ascii file names for pdfTeX
	with UTF-8 source files (w32 only).

2018-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Discard the changes on 2018-05-11, since
	'command_line_encoding=utf-8' is not so natural for
	pdfTeX (w32 only).

2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex.c: Allow non-ascii file names also for pdfTeX
	(w32 only).

2018-01-18  Karl Berry  <karl@freefriends.org>
